[tool.poetry]
name = "ska-ser-jira-checks"
version = "0.1.0"
description = ""
authors = ["Drew Devereux"]

[tool.poetry.dependencies]
python = "^3.9"
jira = "^3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.3.1"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
pylint-junit = "^0.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
