[project]
name = "ska-ser-jira-checks"
version = "0.1.0"
description = ""
authors = ["Drew Devereux"]
requires-python = ">=3.9,<4"
dependencies = [
    "jira",
    "tabulate",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "pylint",
    "flake8-docstrings",
    "flake8-rst-docstrings",
    "darglint",
    "pylint-junit",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = ["-ra", "-v", "--junitxml=reports/report.xml"]