[project]
name = "ska-ser-jira-checks"
version = "0.1.0"
description = ""
authors = [{name = "Drew Devereux"}]
requires-python = ">=3.9,<4"
dependencies = [
    "jira",
    "tabulate",
    "PyYAML",
]

[project.scripts]
ska-ser-jira-checks = "ska_ser_jira_checks.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "pylint",
    "flake8-docstrings",
    "flake8-rst-docstrings",
    "darglint",
    "pylint-junit",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = ["-ra", "-v"]
